--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
+        "php-mock/php-mock-phpunit": "^2.10",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
